[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ix-missionproof"
version = "0.1.0"
description = "Evidence and authority control plane for governed AI agents, engineering workflows, and autonomous systems."
readme = { text = "IX-MissionProof documentation is delivered with the completed initial build.", content-type = "text/plain" }
requires-python = ">=3.11"
license = "LicenseRef-IX-MissionProof-Source-Available-Evaluation-1.0"
license-files = ["LICENSE"]
authors = [
  { name = "Bryce Lovell" }
]
keywords = [
  "agent-governance",
  "ai-assurance",
  "ai-governance",
  "autonomy-assurance",
  "evidence",
  "human-authority",
  "runtime-assurance",
  "software-assurance"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8"
]

[project.urls]
Repository = "https://github.com/BryceWDesign/IX-MissionProof"
Commercial-Licensing = "https://www.linkedin.com/in/brycewdesign/"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["ix_missionproof*"]

[tool.setuptools.package-data]
ix_missionproof = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers"
]

[tool.coverage.run]
branch = true
source = ["ix_missionproof"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "UP",
  "W"
]
ignore = [
  "PLR0913"
]

[tool.ruff.lint.isort]
known-first-party = ["ix_missionproof"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "PLR2004",
  "S101"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["ix_missionproof"]
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true
pretty = true
